samples/_failures_safe/1761458750_f2226e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a3c00ed.c: In function ‘main’:
./samples/SAFE/__tmp_7a3c00ed.c:158:9: error: expected declaration or statement at end of input
  158 |         }
      |         ^
./samples/SAFE/__tmp_7a3c00ed.c:158:9: error: expected declaration or statement at end of input
